权限管理0624 22:10 by王明凯 权限合并、权限批量增加、修改、删除、展开、合并 第二版

--- a/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList_add.html
+++ b/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList_add.html
@@ -26,7 +26,8 @@
         <div class="layui-form-item">
             <label class="layui-form-label">设置权限:</label>
             <div class="layui-input-inline">
-                <select id="permissionName" name="permissionName" lay-filter="dp" lay-search=""></select>
+                <!--<select id="permissionName" name="permissionName" lay-filter="dp" lay-search=""></select>-->
+                <div id="permissionName"></div>
             </div>
         </div>
 
@@ -41,5 +42,6 @@
     </form>
 </div>
 <script src="${ctxPath}/static/salary/PermissionManagement/blackList/blackList_add.js"></script>
+<script src="${ctxPath}/static/salary/PermissionManagement/xm-select.js" type="text/javascript" charset="utf-8"></script>
 @}
 
