--- a/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList.html
+++ b/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList.html
@@ -1,5 +1,8 @@
 @layout("/common/layout.html",{title:'管理'}){
 <link type="text/css" href="/static/css/salary/permission.css"/>
+<style>
+    td{vertical-align: middle !important;}
+</style>
 <div class="layui-fluid weadmin-body" xmlns:hussar="http://www.w3.org/1999/xhtml">
     <form class="layui-form" action="">
         <div class="layui-elem-quote">
@@ -21,6 +24,10 @@
                 onclick="BlackList.openBlackListDetail()"><i class="layui-icon">&#xe642;</i>修改</button>
                 <button type="button" class="layui-btn" id="del"
                 onclick="BlackList.delete()"><i class="layui-icon">&#xe640;</i>删除</button>
+                <button type="button" class="layui-btn" id="unfold"
+                onclick="BlackList.unfold()"><i class="layui-icon">&#xe622;</i>展开</button>
+                <button type="button" class="layui-btn" id="fold"
+                onclick="BlackList.fold()"><i class="layui-icon">&#xe758;</i>收起</button>
             </div>
         </div>
     </form>
@@ -48,7 +55,7 @@
         </form>
     </div>
 
-    <table id="BlackListTable" ></table>
+    <table id="BlackListTable"></table>
 </div>
 <script src="${ctxPath}/static/salary/PermissionManagement/blackList/blackList.js"></script>
 @}
