权限管理0625 10:45 by王明凯 修复展开后下拉框bug以及更换了展开图标

--- a/src/main/webapp/WEB-INF/view/salary/PermissionManagement/whiteList/whiteList.html
+++ b/src/main/webapp/WEB-INF/view/salary/PermissionManagement/whiteList/whiteList.html
@@ -11,7 +11,7 @@
         <br />
         <div class="layui-form-item clearfix">
             <div class="layui-input-inline">
-                <input type="text" id="condition" placeholder="请输入要查询的工号或者姓名" autocomplete="off" class="layui-input" >
+                <input type="text" id="condition" placeholder="请输入工号或姓名" autocomplete="off" class="layui-input" >
             </div>
             <div class="layui-input-inline">
                 <button class="layui-btn" data-type="reload" type="button" onclick="WhiteList.search()"><i class="layui-icon">&#xe615;</i>查询</button>
@@ -27,7 +27,7 @@
                 <button type="button" class="layui-btn" id="unfold"
                 onclick="WhiteList.unfold()"><i class="layui-icon">&#xe622;</i>展开</button>
                 <button type="button" class="layui-btn" id="fold"
-                onclick="WhiteList.fold()"><i class="layui-icon">&#xe758;</i>收起</button>
+                onclick="WhiteList.fold()"><i class="layui-icon">&#xe60a;</i>收起</button>
             </div>
         </div>
     </form>
