--- a/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList.html
+++ b/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList.html
@@ -11,7 +11,7 @@
         <br />
         <div class="layui-form-item clearfix">
             <div class="layui-input-inline">
-                <input type="text" id="condition" placeholder="请输入名称" autocomplete="off" class="layui-input" value="">
+                <input type="text" id="condition" placeholder="请输入工号或姓名" autocomplete="off" class="layui-input" value="">
             </div>
             <div class="layui-input-inline">
                 <button class="layui-btn" data-type="reload" type="button" onclick="BlackList.search()"><i class="layui-icon">&#xe615;</i>查询</button>
@@ -27,7 +27,7 @@
                 <button type="button" class="layui-btn" id="unfold"
                 onclick="BlackList.unfold()"><i class="layui-icon">&#xe622;</i>展开</button>
                 <button type="button" class="layui-btn" id="fold"
-                onclick="BlackList.fold()"><i class="layui-icon">&#xe758;</i>收起</button>
+                onclick="BlackList.fold()"><i class="layui-icon">&#xe60a;</i>收起</button>
             </div>
         </div>
     </form>
