627 查询翻页问题修复&前端输入提示

--- a/src/main/webapp/WEB-INF/view/salary/move/moveLog.html
+++ b/src/main/webapp/WEB-INF/view/salary/move/moveLog.html
@@ -6,14 +6,14 @@
         </div>
         <br />
         <div class="layui-form-item clearfix" style="width: 100%">
-            <div class="layui-input-inline" style="width: 7%">
-                <input type="text" id="condition1" placeholder="请输入操作ID" autocomplete="off" class="layui-input" >
+            <div class="layui-input-inline" style="width: 15%">
+                <input type="text" id="condition1" placeholder="请输入操作编码" autocomplete="off" class="layui-input" >
             </div>
-            <div class="layui-input-inline" style="width: 12%">
-                <input type="text" id="condition2" placeholder="请输入操作员ID或姓名" autocomplete="off" class="layui-input" >
+            <div class="layui-input-inline" style="width: 15%">
+                <input type="text" id="condition2" placeholder="请输入操作员工号或姓名" autocomplete="off" class="layui-input" >
             </div>
-            <div class="layui-input-inline" style="width: 13%">
-                <input type="text" id="condition3" placeholder="请输入调动员工ID或姓名" autocomplete="off" class="layui-input" >
+            <div class="layui-input-inline" style="width: 15%">
+                <input type="text" id="condition3" placeholder="请输入调动员工工号或姓名" autocomplete="off" class="layui-input" >
             </div>
             <div class="layui-input-inline">
                 <button class="layui-btn" data-type="reload" type="button" onclick="MoveLog.search()"><i class="layui-icon">&#xe615;</i>查询</button>
