--- a/src/main/webapp/WEB-INF/view/salary/departure/departureLog.html
+++ b/src/main/webapp/WEB-INF/view/salary/departure/departureLog.html
@@ -8,13 +8,13 @@
         <div class="layui-form-item clearfix" style="width: 100%">
 
             <div class="layui-input-inline">
-                <input type="text" id="condition1" placeholder="请输入操作ID" autocomplete="off" class="layui-input" >
+                <input type="text" id="condition1" placeholder="请输入操作编码" autocomplete="off" class="layui-input" >
             </div>
             <div class="layui-input-inline">
-                <input type="text" id="condition2" placeholder="请输入操作员ID或姓名" autocomplete="off" class="layui-input" >
+                <input type="text" id="condition2" placeholder="请输入操作员工号或姓名" autocomplete="off" class="layui-input" >
             </div>
             <div class="layui-input-inline">
-                <input type="text" id="condition3" placeholder="请输入离职员工ID或姓名" autocomplete="off" class="layui-input" >
+                <input type="text" id="condition3" placeholder="请输入离职员工工号或姓名" autocomplete="off" class="layui-input" >
             </div>
             <div class="layui-input-inline" >
                 <button class="layui-btn" data-type="reload" type="button" onclick="DepartureLog.search()"><i class="layui-icon">&#xe615;</i>查询</button>
@@ -24,6 +24,7 @@
                 <div class="fr" style="display: flex">
                 <div class="layui-input-inline" style="width: 140px">
                     <select  id="department" lay-verify="required" lay-search="" lay-filter="searchBar">
+                        <option value="">请选择原属部门</option>
                     </select>
                 </div>
                 <!--<div class="layui-input-inline" style="width: 10%">
@@ -32,6 +33,7 @@
                 </div>-->
                 <div class="layui-input-inline" style="width: 170px">
                     <select  id="operationTime" lay-verify="required" lay-search="" lay-filter="searchBar">
+                        <option value="">请选择员工离职时间</option>
                     </select>
                 </div>
                 </div>
