627 查询翻页问题修复&前端输入提示

--- a/src/main/webapp/WEB-INF/view/salary/move/moveLog.html
+++ b/src/main/webapp/WEB-INF/view/salary/move/moveLog.html
@@ -23,6 +23,7 @@
                 <div class="fr" style="display: flex">
                     <div class="layui-input-inline" style="width: 140px">
                         <select  id="oldD" lay-verify="required" lay-search="" lay-filter="searchBar">
+                            <option value="">请选择原部门</option>
                         </select>
                     </div>
                     <!--<div class="layui-input-inline" style="width: 9%">
@@ -31,6 +32,7 @@
                     </div>-->
                     <div class="layui-input-inline" style="width: 140px">
                         <select  id="newD" lay-verify="required" lay-search="" lay-filter="searchBar">
+                            <option value="">请选择新部门</option>
                         </select>
                     </div>
                     <!--<div class="layui-input-inline" style="width: 9%">
@@ -39,6 +41,7 @@
                     </div>-->
                     <div class="layui-input-inline" style="width: 170px">
                         <select  id="operationTime" lay-verify="required" lay-search="" lay-filter="searchBar">
+                            <option value="">请选择调动时间</option>
                         </select>
                     </div>
                 </div>
