--- a/src/main/webapp/WEB-INF/view/salary/staff/staff_edit.html
+++ b/src/main/webapp/WEB-INF/view/salary/staff/staff_edit.html
@@ -1,10 +1,10 @@
 @layout("/common/layout.html",{title:'详情'}){
 <div class="weadmin-body-1 layui-form" style="padding-bottom:50px;">
             <div class="layui-form-item">
-                <label class="layui-form-label">员工ID：</label>
+                <label class="layui-form-label">员工工号：</label>
                 <div class="layui-input-inline">
                     <input id="staffId" name="staffId" class="layui-input"
-                        placeholder="请输入员工ID" value="${item.staffId}" readonly>
+                        placeholder="请输入员工工号" value="${item.staffId}" readonly>
                 </div>
             </div>
             <div class="layui-form-item">
