--- a/src/main/webapp/WEB-INF/view/salary/staff/staff.html
+++ b/src/main/webapp/WEB-INF/view/salary/staff/staff.html
@@ -19,14 +19,24 @@
                     <option value="">部门</option>
                 </select>
             </div>
-            <div class="layui-input-inline" style="width: 70px;">
+            <div class="layui-input-inline" style="width: 120px;">
                 <select id="position" lay-verify="required" lay-search="">
                     <option value="">职位</option>
                 </select>
             </div>
+            <div class="layui-input-inline" style="width: 120px">
+                <select id="entryTime" lay-verify="required" lay-search="" class="">
+                    <option value="">入职时间</option>
+                </select>
+            </div>
+            <div class="layui-input-inline" style="width: 120px">
+                <select id="departureTime" lay-verify="required" lay-search="">
+                    <option value="">离职时间</option>
+                </select>
+            </div>
             <div class="layui-input-inline">
                 <button class="layui-btn" data-type="reload" type="button" onclick="Staff.search()"><i class="layui-icon">&#xe615;</i>查询</button>
-                <button class="layui-btn" type="reset"><i class="layui-icon">&#xe00A;</i>重置</button>
+                <button class="layui-btn" type="reset" onclick="Staff.reset()"><i class="layui-icon">&#xe00A;</i>重置</button>
             </div>
             <div class="fr">
                 <button type="button" class="layui-btn" id="add"
@@ -39,22 +49,22 @@
         </div>
     </form>
 
-    <div>
-        <div class="layui-form" lay-filter="searchBar">
-            <div class="fr" style="display: flex">
-                <div class="layui-input-inline" style="width: 147px;">
-                    <select id="entryTime" lay-verify="required" lay-search="" class="">
-                        <option value="">入职时间</option>
-                    </select>
-                </div>
-                <div class="layui-input-inline" style="width: 161px;">
-                    <select id="departureTime" lay-verify="required" lay-search="">
-                        <option value="">离职时间</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--    <div>-->
+<!--        <div class="layui-form" lay-filter="searchBar">-->
+<!--            <div class="fr" style="display: flex;justify-content: flex-end">-->
+<!--                <div class="layui-input-inline" style="width: 30%">-->
+<!--                    <select id="entryTime" lay-verify="required" lay-search="" class="">-->
+<!--                        <option value="">入职时间</option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--                <div class="layui-input-inline" style="width: 30%">-->
+<!--                    <select id="departureTime" lay-verify="required" lay-search="">-->
+<!--                        <option value="">离职时间</option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <table id="StaffTable" ></table>
 </div>
